Revision history for Perl extension Module::Metadata::CoreList.

1.01  Tue Nov  1 11:09:00 2011
	  - Extend Module::Metadata::CoreList to provide direct access to some functions declared in Module::CoreList,
	  	specifically find_modules() and find_version.
	  - Add bin/cc.perlmodule.pl to utilize the new features. Both this script and bin/cc.corelist.pl will be
	  	installed along with the module itself.
	  - Update the docs to discuss bin/cc.perlmodule.pl.

1.00  Thu Jul  7 13:34:00 2011
	  - Original version