@@ -1,7 +1,19 @@
 [Module]
-Name=Manage::Module::CorePrereqs
+Name=Module::Metadata::CoreList
 Changelog.Creator=Module::Metadata::Changes V 2.03
 Changelog.Parser=Config::IniFiles V 2.66
+
+[V 1.01]
+Date=2011-11-01T11:09:00
+Comments= <<EOT
+- Extend Module::Metadata::CoreList to provide direct access to some functions declared in Module::CoreList,
+specifically find_modules() and find_version.
+- Add bin/cc.perlmodule.pl to utilize the new features. Both this script and bin/cc.corelist.pl will be
+installed along with the module itself.
+- Add t/test.corelist.t to test method run().
+- Add t/test.perlmodule.t to test method check_perl_module().
+- Update the docs to discuss bin/cc.perlmodule.pl.
+EOT
 
 [V 1.00]
 Date=2011-07-07T13:34:00
